refactor(ImageService): 코드 스타일 및 성능 개선
Java 17 스타일 및 함수형 프로그래밍 적용으로 코드 품질 향상
- Collectors.toList()를 Stream.toList()로 변경
- null & empty 체크를 CollectionUtils로 개선
- AtomicInteger를 IntStream으로 대체하여 함수형 스타일 적용

변경사항:
- Stream 종단 연산자 toList() 적용
- Spring CollectionUtils 도입
- IntStream.range() 활용한 인덱스 처리

관련 컴포넌트:
- ImageService
- PostFileResponse
- FileRequest

BREAKING CHANGES:
- 반환되는 List가 불변 객체로 변경됨